# Teporingo

./: README.md  assignment.tsv  index.html  pyproject.toml  teporingo_siamese_factory.html  teporingo_siamese_factory_v3.html
configs/: default.yaml  test.yaml
examples/: run_demo.sh
src/: analyze_output.py  buildnload.py  train_siamese.py
src/teporingo_demultiplexing/: __init__.py  cli.py  config.py  io.py  pipeline.py
src/teporingo_demultiplexing.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/teporingo_demultiplexing/models/: __init__.py  evaluate_siamese.py  siamese_network.py
tests/: test_smoke.py
