[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teporingo-demultiplexing"
version = "0.1.0"
description = "Genotype-to-cell demultiplexing pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Your Name"}
]
dependencies = []

[project.scripts]
teporingo-demultiplexing = "teporingo_demultiplexing.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
